--- a/app/go2me/templates/error.html
+++ b/app/go2me/templates/error.html
@@ -1,7 +1,7 @@
 {% extends "pages.html" %}
 {% block subTitle %}Error - {{ message|escape }}{% endblock %}
 {% block page-heading %}Oh-oh!{% endblock %}
-{% block page-subheading %}Huston, we have a problem.{% endblock %}
+{% block page-subheading %}"Houston, we've had a problem."{% endblock %}
 {% block pagebody %}
 <div style="text-align:center;">
 	<p style="font-size: 24px;" class="error">
