--- a/trunk/app/styles/main.css
+++ b/trunk/app/styles/main.css
@@ -15,16 +15,21 @@ padding:0;
 margin:0;
 }
 
+ul {
+margin-top: 0;
+margin-bottom: 0;
+}
+
 h1 {
 margin: 0;
-font-size: 20px;
+font-size: 24px;
 white-space: nowrap;
 overflow: hidden;
 }
 
 h2 {
-margin: 0 0 5px 0;
-font-size: 18px;
+margin: 0 0 10px 0;
+font-size: 22px;
 font-weight: normal;
 }
 
@@ -63,11 +68,6 @@ text-decoration: none;
 
 a:hover {
 text-decoration: underline;
-}
-
-div.bookmarklet {
-text-align: center;
-padding: 15px 0;
 }
 
 img {
@@ -133,19 +133,6 @@ div.head a {
 color: white;
 }
 
-div.left {
-clear: left;
-width: 470px;
-float: left;
-}
-
-div.right {
-float: right;
-width: 470px;
-padding-left: 20px;
-border-left: 1px solid #a30a0a;
-}
-
 div.timer {
 clear: both;
 padding-top:15px;
@@ -158,9 +145,37 @@ text-align:center;
 padding: 15px 0 5px 0;
 }
 
+div.callout {
+border: 2px solid #920909;
+margin-bottom: 7px;
+}
+
+div.callout h2 {
+background: url(/images/header-background.png) repeat-x scroll top;
+color: white;
+text-align:center;
+padding: 5px 5px 7px 5px;
+}
+
+div.callout div {
+margin: 0 7px 7px 7px;
+}
+
 /* =================================================
    Home Page
    ================================================= */
+div.left {
+clear: left;
+width: 570px;
+float: left;
+}
+
+div.right {
+float: right;
+width: 370px;
+padding-left: 20px;
+border-left: 1px solid #a30a0a;
+}
 
 .extlogo {
 border:1px solid #6b5251;
@@ -182,13 +197,18 @@ margin-right: 10px;
 padding-top: 2px;
 }
 
+div.bookmark_inst {
+display:none;
+font-style:italic;
+}
+
 /* =================================================
    Ranked Scores Table (home, user, and tag pages)
    ================================================= */
 
 table.scores {
-margin: auto;
-width: 900px;
+margin-top: 10px;
+width: 100%
 }
 
 table.scores th {
@@ -202,12 +222,12 @@ vertical-align: top;
 padding-top: 5px;
 }
 
-table.scores td.title div {
+table.scores td.title {
 width: 400px;
 overflow: hidden;
 }
 
-table.scores td.num {
+table.scores .num {
 text-align: center;
 }
 
@@ -218,10 +238,6 @@ white-space: nowrap;
 table.scores td.bar-td {
 vertical-align: middle;
 padding-left: 5px;
-}
-
-div.bar-holder {
-width: 200px;
 }
 
 div.bar {
