--- a/app/go2me/templates/tag.html
+++ b/app/go2me/templates/tag.html
@@ -1,7 +1,7 @@
 {% extends "pages.html" %}
 {% load humanize %}
 {% load custom %}
-{% block subTitle %}{{tag}} links{% endblock %}
+{% block subTitle %}Popular {{tag}} links{% endblock %}
 
 {% block script %}
 Go2.SetCSRF("{{csrf}}");
@@ -27,12 +27,12 @@ function KeyDown(evt)
 }
 {% endblock %}
 
+{% block page-heading %}Popular {{tag}} links{% endblock %}
+{% block page-subheading %}
+	Add "[{{tag}}]" to the end of a comment to include your link here.
+{% endblock %}
+
 {% block pagebody %}
-<div class="head">
-	<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo" src="/images/logo.png"></a>
-	<h1 style="padding-top: 40px;">{{tag}} links</h1>
-	<div style='clear:both;'></div>
-</div>
 
 <table class="scores">
 <tr><th>Title</th><th>Visitors</th><th>Commenters</th><th>Created</th><th>Score</th></tr>
