--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -16,8 +16,8 @@ margin:0;
 }
 
 ul {
-margin-top: 0;
-margin-bottom: 0;
+margin-top: 10px;
+margin-bottom: 10px;
 }
 
 h1 {
@@ -115,7 +115,7 @@ div.head div.page-heading {
 position: absolute;
 top: 7px;
 left: 225px;
-width: 500px;
+width: 700px;
 }
 
 div.head h1 {
@@ -146,7 +146,6 @@ padding: 15px 0 5px 0;
 }
 
 div.callout {
-border: 2px solid #920909;
 margin-bottom: 7px;
 }
 
@@ -155,10 +154,13 @@ background: url(/images/header-background.png) repeat-x scroll top;
 color: white;
 text-align:center;
 padding: 5px 5px 7px 5px;
+margin: 0;
 }
 
-div.callout div {
-margin: 0 7px 7px 7px;
+div.callout > div {
+border: 2px solid #920909;
+border-top: 0;
+padding: 5px 7px 7px 7px;
 }
 
 /* =================================================
@@ -298,7 +300,7 @@ width: 70px;
 table.form th {
 text-align: right;
 vertical-align: top;
-padding-top: 5px;
+padding-top: 3px;
 padding-right: 5px;
 }
 
