--- a/trunk/app/go2me/templates/home.html
+++ b/trunk/app/go2me/templates/home.html
@@ -74,7 +74,7 @@ function Shorten()
 	<p>
 	You can use {{site_name}} to take any long link (URL) and convert it to a shorter one that
 	you can send in Twitter, IM, or Email messages.  Your link will display the page
-	you want to share with a sidebar chat to exchange comments with your readers.
+	you want to share alongside a chat window to exchange comments with your readers.
 	Try it:
 	</p>
 	<p style="text-align:center;"><a target="_blank" href="/G">http://{{site_host}}/G</a></p>
