--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -471,6 +471,14 @@ div.closed-star:hover {
 background: url(/images/open-star.png) scroll top;
 }
 
+div.open-lock {
+background: url(/images/lock_open.png) scroll top;
+float: left;
+width: 20px;
+height: 22px;
+cursor: pointer;
+}
+
 div.panel-body div.open-star {
 float: right;
 }
