--- a/app/go2me/templates/mapped.html
+++ b/app/go2me/templates/mapped.html
@@ -74,6 +74,8 @@ function Loaded()
 	OnResize();
 	Go2.InitPanels();
 	Go2.AddEventFn(window, "resize", OnResize);
+	
+	Go2.UpdatePrivacy();
 }
 
 function OnResize()
@@ -217,7 +219,7 @@ Go2.AddEventFn(window, "click", Click)
 				{% endif %}
 			</div>
 			<div style="margin: 5px 5px 2px 0;text-align:right;">
-				<img class="clickable" onclick="Go2.TogglePrivate();return false;" id="private-image" title="Make Link Private" src="/images/lock_open.png">
+				<img class="clickable" onclick="Go2.TogglePrivate('{{map.GetId}}', '{{username}}');return false;" id="private-image" src="/images/lock_open.png">
 				<a href="mailto:?subject=Go2.me at {{map.title|escape}}&body=I've shared a link with you at http://{{site_host}}/{{map.GetId}}"
 				   title="Send Link by Email">
 					<img src="/images/email.png">
