--- a/trunk/app/go2me/templates/mapped.html
+++ b/trunk/app/go2me/templates/mapped.html
@@ -243,7 +243,7 @@ Go2.AddEventFn(window, "click", Click)
 	<div id="chat-panel" class="panel">
 		<div class="panel-header">
 			<div class="expander expanded"></div>
-			Chat
+			<span id="chat-title">Chat</span>
 		</div>
 		<div class="panel-body">
 			<!-- Variable height -->
