--- a/app/go2me/templates/head.html
+++ b/app/go2me/templates/head.html
@@ -5,7 +5,7 @@
 {% block subTitle %}{{map.title|escape}}{% endblock %}
 
 {% block script %}
-Go2.SetCSRF("{{csrf}}");
+Go2.Init("{{username}}", "{{csrf}}");
 
 var txtUsername;
 var txtComment;
