--- a/app/go2me/templates/popular.html
+++ b/app/go2me/templates/popular.html
@@ -5,7 +5,7 @@
 {% block subTitle %}Popular Links{% endblock %}
 
 {% block script %}
-Go2.SetCSRF("{{csrf}}");
+Go2.Init("{{username}}", "{{csrf}}");
 
 var txtUsername;
 
