--- a/app/go2me/templates/mapped.html
+++ b/app/go2me/templates/mapped.html
@@ -167,7 +167,7 @@ function Loaded()
 
 </div> <!-- info sidebar -->
 
-<div id="border-v" style="position:absolute;top:32;left:300px;height:3000px;" class="border-v"></div>
+<div id="border-v" style="position:absolute;top:32px;left:300px;height:3000px;" class="border-v"></div>
 
 <div id="content">
 	<iframe id="content-iframe" name="content-frame" src="{{map.Href}}"/>
